Fixed the header margin collapse.  fixed mobile dropdown menu z-index

--- a/css/pliable/bootstrap.overwrites/navbar/navbar.structure.css
+++ b/css/pliable/bootstrap.overwrites/navbar/navbar.structure.css
@@ -9,6 +9,7 @@ nav.navbar {
     margin-bottom: 0px;
     height: inherit;
     min-height: inherit;
+    z-index: 1000;
 }
 
 nav.navbar .navbar-header {
