--- a/css/pliable/pliable.base.structure.css
+++ b/css/pliable/pliable.base.structure.css
@@ -47,6 +47,10 @@ p {
     margin: 1.5rem 0px;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    display: inline-block;
+}
+
 h1 {
     /* structure */
     margin-top: 1.8rem;
